mb complete + some tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
 project(Variant)
-add_executable(${PROJECT_NAME} main.cpp variant.h)
+#add_executable(${PROJECT_NAME} "main.cpp" bind.h)
 
 add_definitions(-DAlex_PKZDL=1)
 add_definitions(-DTiliTim=1)
@@ -10,6 +10,32 @@ add_definitions(-DHOME=1)
 #set (gtest_disable_pthreads on)
 #add_subdirectory (googletest)
 #config_compiler_and_linker()
+
+add_definitions(-DGTEST_LANGUAGE_CXX11)
+
+find_package(Threads REQUIRED)
+
+if ($ENV{GOOGLETEST_DIR})
+    SET(GOOGLETEST_DIR $ENV{GOOGLETEST_DIR})
+else ()
+    message(WARNING "Using googletest src dir specified at Qt Creator wizard")
+    SET(GOOGLETEST_DIR "/home/alexander/study/main/programming/C++/programs /persistent_set/persistent_set/googletest")
+endif ()
+if (EXISTS ${GOOGLETEST_DIR})
+    SET(GTestSrc ${GOOGLETEST_DIR}/googletest)
+    SET(GMockSrc ${GOOGLETEST_DIR}/googlemock)
+else ()
+    message( FATAL_ERROR "No googletest src dir found - set GOOGLETEST_DIR to enable!")
+endif ()
+
+include_directories(${GTestSrc} ${GTestSrc}/include ${GMockSrc} ${GMockSrc}/include)
+
+add_executable(${PROJECT_NAME} main.cpp variant.h tst_adf.h
+               ${GTestSrc}/src/gtest-all.cc
+               ${GMockSrc}/src/gmock-all.cc)
+
+add_test(${PROJECT_NAME} COMMAND ${PROJECT_NAME})
+target_link_libraries(${PROJECT_NAME} PRIVATE Threads::Threads)
 
 set(CMAKE_C_COMPILER /usr/bin/gcc-7)
 set(CMAKE_CXX_COMPILER /usr/bin/g++-7)
@@ -20,4 +46,5 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall -Wextra -pedantic -Wformat=2 -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -D_FORTIFY_SOURCE=2 -Wfloat-equal -Wconversion -D_FORTIFY_SOURCE=2 -fsanitize=address -fsanitize=undefined -fno-sanitize-recover -fstack-protector")
   set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -std=c++17 -fsanitize=address,undefined -D_GLIBCXX_DEBUG")
 endif()
+
 
